--- a/public/css/application.css
+++ b/public/css/application.css
@@ -3,7 +3,9 @@
   width: 600px;
   padding: 0px 20px 20px 20px;
   border: 1px dotted black;
+  text-align: center;
 }
 th {
   text-align: left;
 }
+
