--- a/app/views/answer_finished.erb
+++ b/app/views/answer_finished.erb
@@ -1,11 +1,12 @@
 <div class="container">
 
+<p>User: <%=@user_id%></p>
 <p>Finished Round: <%=@round_id%> </p>
 <p>Deck Name: <%=Deck.find(@deck_id).name%> </p>
 <p>Score: <%=@score%> </p>
 
 
-<form id="answer" action="/play" method="GET">
+<form id="answer" action="/play/<%=@user_id%>" method="GET">
 <input type="submit" value="End">
 
 </form>
