--- a/app/views/play.erb
+++ b/app/views/play.erb
@@ -1,37 +1,36 @@
 <div class="container">
 
-
 <p>Here's the user id<%=@user_id%></p>
 <p>Here's the first deck name  <%=@all_decks.first.name%></p>
 
-<h1>Pick a deck and start playing!</h1>
+<h1 class="play">Pick a deck and start playing!</h1>
+
 <form id="play" action="/user/<%=@user_id%>/cards" method="POST">
 <select name="deck"> 
   <% @all_decks.each do |deck| %>
   <option value = "<%=deck.id%>"><%= deck.name.capitalize %></option>
   <% end %>
 </select>
-  <input type="submit" value="Start playing">
+  <input class="submitanswer" type="submit" value="Start playing">
 </form>
 
-
-<h2>User stats</h2>
-<!-- Our datafield titles-->
-  <table>
-      <tr> 
-        <th>Round Number</th>
-        <th>Deck Name</th>
-      </tr>
-    <!-- Each row of user data-->
-      <% @round.each do |round| %>
-      <tr>
-        <td><%= round.id %></td><br>
-        <%  @no = round.deck %>    
-        <td><%= Deck.find_by_id(@no).name.capitalize %> </td><br>  
-      </tr>
-      <% end %>
-  </table>
-
+  <h2 class="play">User stats</h2>
+  <!-- <div class="statcontainer"> -->
+    <table class="center">
+        <tr> 
+          <th>Round Number</th>
+          <th>Deck Name</th>
+        </tr>
+      <!-- Each row of user data-->
+        <% @round.each do |round| %>
+        <tr>
+          <td class="td-play"><%= round.id %></td><br>
+          <%  @no = round.deck %>    
+          <td class="td-play"><%= Deck.find_by_id(@no).name.capitalize %> </td><br>  
+        </tr>
+        <% end %>
+    </table>
+<!--   </div> -->
 </div>
 
 
