--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,11 +1,90 @@
 .container {
   margin: 20px auto;
   width: 600px;
-  padding: 0px 20px 20px 20px;
-  border: 1px dotted black;
+/*  padding: 0px 20px 20px 20px;*/
+/*  border: 1px dotted black;*/
   text-align: center;
 }
-th {
-  text-align: left;
+
+body {
+/*  color #fff;*/
+  background-color: #fff;
+  font-family: futura, sans-serif;
+  font-size: 20px;
+  text-align:center;
 }
+
+.answer {
+  font-size: 30px;
+}
+
+#correctness {
+  font-style: italic;
+  color: #086DB5;
+}
+
+h2.card {
+ color: black;
+}
+
+h1.card {
+  text-align: center;
+  color: #086DB5;
+}
+
+table {
+  margin: 0;
+  vertical-align: text-top;
+  margin-left:auto; 
+  margin-right:auto;
+}
+
+table.center {
+  vertical-align: text-top;
+}
+
+th {
+  border: solid;
+  padding: 10px;
+}
+
+.td-play {
+  color: black;
+  padding: 10px;
+  border-right: solid;
+  border-left: solid;
+  border-color: solid;
+}
+
+td {
+  color: #778899;
+  border-bottom: solid;
+  padding: 10px;
+  background-color: transparent;
+}
+
+th {
+  text-align: center;
+}
+
+/*Alternate Button*/
+/*input.submitanswer{
+  border:none;
+  background: rgba(54,54,54,0.6);
+  border-radius: 4px;
+  box-shadow: 1px 1px 1px black;
+}
+input.submitanswer:hover{
+  box-shadow: none;
+  background: rgba(54,54,54,0.7);
+}
+*/
+/*div.statcontainer{
+  height: 100px;
+  background:rgba(200,200,200,1);
+  overflow-y: scroll;
+}*/
+
+
+
 
