--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,5 +19,8 @@
 </head>
 <body>
   <%= yield %>
+  <form id ="logout" action="/" method="POST"
+    <input class="logout" type="submit" value="Logout!">
+  </form>
 </body>
 </html>
