--- a/app/views/play.erb
+++ b/app/views/play.erb
@@ -11,7 +11,7 @@
   <option value = "<%=deck.id%>"><%= deck.name.capitalize %></option>
   <% end %>
 </select>
-  <input class="submitanswer" type="submit" value="Start playing">
+  <input class="submitanswer" type="submit" value="Start playing"><br><br>
 </form>
 
   <h2 class="play">User stats</h2>
