--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,8 +1,8 @@
 .container {
-  margin: 20px auto;
+  margin: 10px auto;
   width: 600px;
-/*  padding: 0px 20px 20px 20px;*/
-/*  border: 1px dotted black;*/
+  padding-bottom: 15px;
+  border: 1px solid black;
   text-align: center;
 }
 
@@ -28,8 +28,7 @@ h2.card {
 }
 
 h2.play {
-  background-color: red;
-  margin-bottom: 0px;
+  margin-bottom: 15px;
 }
 
 h1.card {
@@ -46,7 +45,6 @@ table {
 
 table.center {
   vertical-align: text-top;
-  background-color: red;
   margin-top: 0px;
 }
 
