--- a/app/views/card.erb
+++ b/app/views/card.erb
@@ -2,11 +2,10 @@
 
 <table class="answer-table">
   <tr>
-<td>User: <%=@user_id%></td>
+<td>User: <%=User.find(@user_id).email%></td>
 <td>Round: <%=@round_id%></td>
 <td>Deck: <%=@deck_id%></td>
 <td>Card: <%=@card_id%></td>
-<td>Score: <%=@new_score%></td>
   </tr>
 </table>
 
