--- a/app/views/play.erb
+++ b/app/views/play.erb
@@ -20,13 +20,18 @@
         <tr> 
           <th>Round Number</th>
           <th>Deck Name</th>
+          <th>Score </th>
         </tr>
       <!-- Each row of user data-->
+        <%  a = 1 %>
         <% @round.each do |round| %>
         <tr>
-          <td class="td-play"><%= round.id %></td><br>
+          
+          <td class="td-play"><%= a %></td><br>
           <%  @no = round.deck %>    
-          <td class="td-play"><%= Deck.find_by_id(@no).name.capitalize %> </td><br>  
+          <td class="td-play"><%= Deck.find_by_id(@no).name.capitalize %> </td><br>
+          <td class="td-play"><%= ((Round.find(round.id).score.to_f / Deck.find(@no).cards.length.to_f) * 100).floor  %> % </td><br>
+          <%a += 1 %>
         </tr>
         <% end %>
     </table>
