New user signin created

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,4 +7,6 @@
     <label for="user_password">Password:</label>
     <input id ="user_password" type="text" name="password" placeholder="*******"><br><br>
     <input id="submit" type="submit" name='Submit'><br>
+    <p>New user? <a href="/signup">Sign up here</a></p>
 </div>
+
