--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,7 +2,7 @@
   margin: 10px auto;
   width: 600px;
   padding-bottom: 15px;
-  border: 1px solid black;
+/*  border: 1px solid black;*/
   text-align: center;
 }
 
@@ -31,7 +31,7 @@ h2.play {
   margin-bottom: 15px;
 }
 
-h1.card {
+h1.card,h2.signup {
   text-align: center;
   color: #086DB5;
 }
