Finalizing error page; fixed login issue

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,8 +5,8 @@
     <label for="user_email">Email:</label>
     <input id ="user_email" type="text" name="email" placeholder="your@email.com"><br><br>
     <label for="user_password">Password:</label>
-    <input id ="user_password" type="text" name="password" placeholder="*******"><br><br>
+    <input id ="user_password" input type="password" name="password" placeholder="*******"><br><br>
     <input id="submit" type="submit" name='Submit'><br>
-    <p>New user? <a href="/signup">Sign up here</a></p>
+<!--     <p>New user? <a href="/signup">Sign up here</a></p> -->
 </div>
 
