--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -4,12 +4,13 @@
 
   <form id="signup" method="POST">
     <label for="new_user_email">Enter your email address:</label>
-    <input id ="new_user_email" type="text" name="new_user_email" placeholder="your@email.com"><br><br>
+    <input id ="new_user_email" input type="text" name="new_user_email" placeholder="your@email.com"><br><br>
     <label for="new_user_password">Enter your password:</label>
-    <input id ="new_user_password" type="text" name="new_user_password" placeholder="*******"><br><br>
+    <input id ="new_user_password" input type="password" name="new_user_password" placeholder="*******"><br><br>
     <label for="confirm_new_user_password">Confirm your password:</label>
-    <input id ="confirm_new_user_password" type="text" name="confirm_password" placeholder="*******"><br>
+    <input id ="confirm_new_user_password" input type="password" name="confirm_password" placeholder="*******"><br>
     <br>
     <input id="submit" type="submit" name='submit' value='Sign Up'><br>
+  </form>
 </div>
 
