Sessions issue resolved
Login buttons no longer torment me everywhere on the site.

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,6 +7,6 @@
     <label for="user_password">Password:</label>
     <input id ="user_password" input type="password" name="password" placeholder="*******"><br><br>
     <input id="submit" type="submit" name='Submit'><br>
-<!--     <p>New user? <a href="/signup">Sign up here</a></p> -->
+    <p>New user? <a href="/signup">Sign up here</a></p>
 </div>
 
