--- a/app/views/error.erb
+++ b/app/views/error.erb
@@ -1,3 +1,3 @@
 <div class="error">
-
+<img src="http://images3.wikia.nocookie.net/__cb20120902070121/thehungergames/images/3/3a/Funny-gif-hahaha-no-transformers.gif" alt="Smiley face" height="600" width="700">
 </div>
