--- a/public/css/application.css
+++ b/public/css/application.css
@@ -77,11 +77,10 @@ th {
   width: 600px;
   height: 420px;
   padding-bottom: 15px;
-  border: 1px solid;
 /*  border: 1px solid black;*/
   text-align: center;
-  background-image: url('http://images3.wikia.nocookie.net/__cb20120902070121/thehungergames/images/3/3a/Funny-gif-hahaha-no-transformers.gif'); 
-  background-size: 100% }
+  /*background-image: url('http://images3.wikia.nocookie.net/__cb20120902070121/thehungergames/images/3/3a/Funny-gif-hahaha-no-transformers.gif'); 
+  background-size: 100% }*/
 
 /*Alternate Button*/
 /*input.submitanswer{
@@ -100,7 +99,6 @@ div.statcontainer{
   background:rgba(200,200,200,1);
   overflow-y: scroll;
 }
-
 
 
 
