--- a/app/views/_answer.erb
+++ b/app/views/_answer.erb
@@ -2,6 +2,7 @@
 <p class="answer" id="correctness"> <%=@correctness%> </p>
 <p class="answer">The correct answer is: <%=@answer%> </p>
 
+<td>Score: <%=@new_score%></td>
 
 <form id="answer" action=<%=@action%> method="GET">
 <input  type="submit" value="Next card">
